--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </div>
         <div class="row">
             <p>
-                Copyright &copy; 2019 by Omnifood. All rights reserved.
+                Copyright &copy; 2020 by Alexander. All rights reserved.
             </p>
         </div>
     </footer>
